feat: user login endpoint
