# controllers/public_auth.go
@@ -35,11 +35,37 @@ func (apc *AuthPublicController) Register(c *gin.Context) {
 		return
 	}
 
-	err = apc.userUsecase.Register(c.Request.Context(), &registration)
+	err = apc.userUsecase.Register(c.Request.Context(), registration)
 	if err != nil {
 		apc.ReturnNotOK(c, err)
 		return
 	}
 
 	apc.ReturnOK(c, http.StatusCreated, "registration success", nil)
+}
+
+// Login      	 godoc
+// @Summary      Login
+// @Description  Login user to our system account.
+// @Tags         authentication
+// @Accept 		 json
+// @Param 		 credential body schemas.Login true "user credential"
+// @Produce      json
+// @Success      200  {object}  schemas.GeneralResponse
+// @Router       /v1/public/auth/login [post]
+func (apc *AuthPublicController) Login(c *gin.Context) {
+	credential := schemas.Login{}
+	err := c.BindJSON(&credential)
+	if err != nil {
+		apc.ReturnNotOK(c, err)
+		return
+	}
+
+	user, err := apc.userUsecase.Login(c.Request.Context(), credential)
+	if err != nil {
+		apc.ReturnNotOK(c, err)
+		return
+	}
+
+	apc.ReturnOK(c, http.StatusCreated, "login successful", user)
 }
