# docs/swagger.json
@@ -4,6 +4,40 @@
         "contact": {}
     },
     "paths": {
+        "/v1/public/auth/login": {
+            "post": {
+                "description": "Login user to our system account.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentication"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "user credential",
+                        "name": "credential",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.GeneralResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/public/auth/register": {
             "post": {
                 "description": "Register user to our system account.",
@@ -99,6 +133,21 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "schemas.Login": {
+            "type": "object",
+            "required": [
+                "identifier",
+                "password"
+            ],
+            "properties": {
+                "identifier": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
