# schemas/user.go
@@ -4,6 +4,7 @@ import "strings"
 
 // TODO: validate string length
 // TODO: validate must not have whitespace
+// TODO: validate username cannot use special characters except -_.
 type Register struct {
 	Username string `json:"username" binding:"required"`
 	Email    string `json:"email" binding:"required,email"`
@@ -14,4 +15,9 @@ func (r *Register) Prepare() {
 	r.Username = strings.TrimSpace(r.Username)
 	r.Email = strings.ToLower(strings.TrimSpace(r.Email))
 	r.Password = strings.TrimSpace(r.Password)
+}
+
+type Login struct {
+	Identifier string `json:"identifier" binding:"required"`
+	Password   string `json:"password" binding:"required"`
 }
